Enhance user form with password field and validation; improve text form item for password visibility and strength indication

--- a/src/app/home/details-form/details-form.component.html
+++ b/src/app/home/details-form/details-form.component.html
@@ -2,5 +2,5 @@
     <h3>Details Form</h3>
     <app-text-form-item label="First Name" [field]="detailsForm().firstName" />
     <app-text-form-item label="Last Name" [field]="detailsForm().lastName" />
-    <app-text-form-item label="Phone" [field]="detailsForm().phone" />
+    <app-text-form-item label="Phone" type="tel" [field]="detailsForm().phone" />
 </div>
